<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Judul"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Teks1"
        android:textColor="@color/text_color2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingBottom="5dp"
        android:text="@string/teks2"
        android:textColor="@color/text_color2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_nik"
            android:hint="@string/nik"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="16"
            android:padding="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_nama"
            android:hint="@string/nama"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:padding="10dp"
            android:textSize="12sp" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrooll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/kirim"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/textView3"-->
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tempatlahir"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="no"
                android:background="@drawable/background_edittext"
                android:hint="@string/tempat_lahir"
                android:inputType="textNoSuggestions"
                android:maxLength="50"
                android:padding="10dp"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/background_button_calender"
                    android:contentDescription="@string/button_tanggal"
                    android:padding="9dp"
                    android:src="@drawable/ic_calendar" />

                <EditText
                    android:id="@+id/tanggallahir"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:autofillHints="no"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/tanggal_lahir"
                    android:inputType="textNoSuggestions"
                    android:padding="10dp"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:text="@string/jenis_kelamain"
                    android:textColor="@color/text_color2"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup

                    android:id="@+id/jeniskelamin"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/lakilaki"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:text="@string/laki_laki"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/perempuan"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/perempuan"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="37dp"
                    android:text="@string/pekerjaan"
                    android:textColor="@color/text_color2"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup
                    android:id="@+id/pekerjaan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/pns"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/pegawai_negeri_sipil"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/swasta"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/pegawai_swasta"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/pelajar"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/pelajar"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/wiraswasta"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:text="@string/wiraswasta"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="55dp"
                    android:text="@string/status_perkawinan"
                    android:textColor="@color/text_color2"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <RadioGroup

                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/kawin"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:text="@string/kawin"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/belum_kawin"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:text="@string/belum_kawin"
                        android:textColor="@color/text_color2"
                        android:textSize="12sp" />

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_location"
                android:hint="@string/alamat"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:lines="3"
                android:maxLines="3"
                android:padding="10dp"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/kirim"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_button"
        android:text="@string/kirim_data"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>